# sloptest

./: .env  .gitignore  .testgen_usage.json  CLI_ENHANCEMENT_GUIDE.md  PROMPT_ENGINEERING_ASSESSMENT.md  README.md  SECURITY_IMPROVEMENTS.md  demo-config.yml  demo_new_configs.py  pyproject.toml  test_refinement_flow.py
docs/: modern_python_mutations.md
prompts/: contextual_prompts.yaml  refinement_prompts.yaml  system_prompts.yaml  templates.yaml
src/smart_test_generator/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/smart_test_generator/analysis/: __init__.py  async_await_mutator.py  code_analyzer.py  coverage_analyzer.py  dataclass_mutator.py  failure_pattern_analyzer.py  mutation_engine.py  python_analyzers.py  quality_analyzer.py  test_mapper.py  type_hint_mutator.py
src/smart_test_generator/core/: __init__.py  application.py  llm_factory.py
src/smart_test_generator/generation/: __init__.py  incremental_generator.py  llm_clients.py  llm_helpers.py  orchestrator_client.py  test_generator.py
src/smart_test_generator/models/: __init__.py  data_models.py
src/smart_test_generator/reporting/: __init__.py  reporter.py
src/smart_test_generator/services/: __init__.py  analysis_service.py  base_service.py  coverage_service.py  dependency_service.py  environment_service.py  git_service.py  quality_service.py  test_generation_service.py
src/smart_test_generator/tracking/: __init__.py  state_tracker.py
src/smart_test_generator/utils/: .testgen_usage.json  __init__.py  ast_merge.py  (+8 more)
tests/smart_test_generator/: test_cli.py  test_exceptions.py
(+58 files in other folders)
