[project]
name = "sloptest"
version = "0.1.0"
description = "Intelligently generates missing tests by analyzing existing coverage and test patterns"
authors = [{ name = "0xfauzi", email = "fauzi@0xfauzi.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "rich>=13.0.0",
    "boto3>=1.34.0",
    "langchain-aws>=0.2.1",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["black>=23.12.0", "ruff>=0.1.8", "mypy>=1.7.1", "pytest-asyncio>=0.21.1"]

[project.scripts]
sloptest = "smart_test_generator.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C90", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
